--- a/mensajes.html
+++ b/mensajes.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -138,10 +138,10 @@
               </div>
               <div class="composer-tools">
                 <label class="composer-btn">
-                  📎
+                  Adjuntos
                   <input id="fileInput" type="file" multiple />
                 </label>
-                <button class="composer-btn" id="btnRecord" type="button">🎙</button>
+                <button class="composer-btn" id="btnRecord" type="button">Voz</button>
                 <div class="composer-hint" id="recordHint"></div>
               </div>
               <div class="composer-preview" id="attachmentsPreview"></div>
@@ -263,3 +263,4 @@
     <script type="module" src="assets/js/pages/mensajes-page.js"></script>
   </body>
 </html>
+
