--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html lang="pl">
   <head>
-    <meta charset="UTF-8" />
-    <title>Polityka prywatności – Aquivivo</title>
+    <meta charset="utf-8" />
+    <title>Polityka prywatności &ndash; AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <script src="assets/js/layout.js" type="module"></script>
   </head>
@@ -30,20 +34,22 @@
             Administrator danych
           </div>
           <div class="muted">
-            Magdalena Meller, ul. Katowicka 2F/6.01, 61-131 Poznan, Polska.<br />
+            Magdalena Meller, ul. Katowicka 2F/6.01, 61-131 Poznań, Polska.<br />
             NIP: 7822348796, REGON: 542556870<br />
-            E-mail: aquivivo.pl@gmail.com, Tel.: +48 669 697 151
+            E-mail:
+            <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>,
+            Tel.: <a href="tel:+48669697151">+48 669 697 151</a>
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">Zakres danych</div>
           <div class="muted">
-            Przetwarzamy w szczegolnosci dane potrzebne do utworzenia konta i
-            realizacji uslug: e-mail, identyfikator uzytkownika, nazwa/handle,
-            dane profilu, dane dotyczace postepow nauki, dane techniczne
-            urzadzenia i polaczenia (np. adres IP), a takze dane platnosci
-            (przetwarzane przez operatorow platnosci).
+            Przetwarzamy w szczególności dane potrzebne do utworzenia konta i
+            realizacji usług: e-mail, identyfikator użytkownika, nazwa/handle,
+            dane profilu, dane dotyczące postępów nauki, dane techniczne
+            urządzenia i połączenia (np. adres IP), a także dane płatności
+            (przetwarzane przez operatorów płatności).
           </div>
         </section>
 
@@ -55,18 +61,18 @@
             Dane przetwarzamy w celu:
             <ul>
               <li>
-                realizacji umowy i swiadczenia uslug (art. 6 ust. 1 lit. b
+                realizacji umowy i świadczenia usług (art. 6 ust. 1 lit. b
                 RODO),
               </li>
               <li>
-                obslugi platnosci i rozliczen (art. 6 ust. 1 lit. b/c RODO),
+                obsługi płatności i rozliczeń (art. 6 ust. 1 lit. b/c RODO),
               </li>
               <li>
-                zapewnienia bezpieczenstwa i prawidlowego dzialania serwisu
+                zapewnienia bezpieczeństwa i prawidłowego działania serwisu
                 (art. 6 ust. 1 lit. f RODO),
               </li>
               <li>
-                kontaktowego wsparcia uzytkownika (art. 6 ust. 1 lit. b/f RODO).
+                kontaktowego wsparcia użytkownika (art. 6 ust. 1 lit. b/f RODO).
               </li>
             </ul>
           </div>
@@ -75,14 +81,14 @@
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">Odbiorcy danych</div>
           <div class="muted">
-            Korzystamy z podwykonawcow w zakresie infrastruktury i platnosci:
+            Korzystamy z podwykonawców w zakresie infrastruktury i płatności:
             <ul>
               <li>Firebase / Google (uwierzytelnianie, baza danych, pliki),</li>
-              <li>Stripe (platnosci karta),</li>
-              <li>Przelewy24 / PayPro S.A. (platnosci P24),</li>
+              <li>Stripe (płatności kartą),</li>
+              <li>Przelewy24 / PayPro S.A. (płatności P24),</li>
               <li>GitHub Pages (hosting strony).</li>
             </ul>
-            Dane sa przetwarzane zgodnie z ich politykami prywatnosci oraz
+            Dane są przetwarzane zgodnie z ich politykami prywatności oraz
             umowami powierzenia.
           </div>
         </section>
@@ -93,21 +99,21 @@
           </div>
           <div class="muted">
             Dane konta przechowujemy przez czas posiadania konta, a po jego
-            usunieciu przez okres niezbedny do realizacji obowiazkow prawnych
-            (np. ksiegowosc). Dane techniczne przechowujemy przez okres
-            niezbedny do zapewnienia bezpieczenstwa i poprawnego dzialania
+            usunięciu przez okres niezbędny do realizacji obowiązków prawnych
+            (np. księgowość). Dane techniczne przechowujemy przez okres
+            niezbędny do zapewnienia bezpieczeństwa i poprawnego działania
             serwisu.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Prawa uzytkownika
+            Prawa użytkownika
           </div>
           <div class="muted">
-            Masz prawo dostepu do danych, ich sprostowania, usuniecia,
+            Masz prawo dostępu do danych, ich sprostowania, usunięcia,
             ograniczenia przetwarzania, przenoszenia, wniesienia sprzeciwu oraz
-            zlozenia skargi do UODO.
+            złożenia skargi do UODO.
           </div>
         </section>
 
@@ -116,9 +122,9 @@
             Cookies i analityka
           </div>
           <div class="muted">
-            Serwis korzysta z niezbednych technicznych plikow
-            cookies/localStorage do utrzymania sesji i bezpieczenstwa. Nie
-            znalezlismy implementacji Google Analytics ani Meta Pixel w kodzie
+            Serwis korzysta z niezbędnych technicznych plików
+            cookies/localStorage do utrzymania sesji i bezpieczeństwa. Nie
+            znaleźliśmy implementacji Google Analytics ani Meta Pixel w kodzie
             produkcyjnym.
           </div>
         </section>
@@ -126,7 +132,8 @@
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">Kontakt</div>
           <div class="muted">
-            W sprawach prywatnosci skontaktuj sie: aquivivo.pl@gmail.com
+            W sprawach prywatności skontaktuj się:
+            <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>
           </div>
         </section>
       </div>
