--- a/regulamin.html
+++ b/regulamin.html
@@ -1,56 +1,104 @@
 <!doctype html>
 <html lang="pl">
   <head>
-    <meta charset="UTF-8" />
-    <title>Regulamin świadczenia usług – Aquivivo</title>
+    <meta charset="utf-8" />
+    <title>Regulamin &ndash; AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/layout.js" type="module"></script>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Regulamin świadczenia usług – Aquivivo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <script src="assets/js/layout.js" type="module"></script>
   </head>
+
   <body data-page="terms">
-      Magdalena Meller, ul. Katowicka 2F/6.01, 61-131 Poznań, Polska, NIP:
-      7822348796, REGON: 542556870, e-mail: aquivivo.pl@gmail.com, tel.: +48 669
-      697 151
-    </p>
-    <h2>Opis usługi</h2>
-    <p>
-      Aquivivo umożliwia zakup dostępu do treści cyfrowych online, w
-      szczególności kursów językowych i materiałów edukacyjnych.
-    </p>
-    <h2>Warunki płatności</h2>
-    <p>
-      Płatności realizowane są za pośrednictwem Stripe oraz Przelewy24. Dostęp
-      do treści uzyskujesz po zaksięgowaniu płatności. Wszystkie ceny zawierają
-      podatek VAT (jeśli dotyczy).
-    </p>
-    <h2>Dostęp do treści</h2>
-    <p>
-      Dostęp do zakupionych treści cyfrowych jest udzielany natychmiast po
-      opłaceniu zamówienia. Użytkownik wyraża zgodę na natychmiastowe
-      świadczenie usługi i traci prawo do odstąpienia od umowy po uzyskaniu
-      dostępu.
-    </p>
-    <h2>Odpowiedzialność</h2>
-    <p>
-      Aquivivo nie ponosi odpowiedzialności za przerwy w dostępie wynikające z
-      przyczyn niezależnych od właściciela serwisu, np. awarie dostawców usług,
-      siła wyższa.
-    </p>
-    <h2>Procedura reklamacji</h2>
-    <p>
-      Reklamacje należy zgłaszać na adres e-mail: aquivivo.pl@gmail.com.
-      Rozpatrzenie reklamacji nastąpi w ciągu 14 dni od daty zgłoszenia.
-    </p>
-    <h2>Postanowienia końcowe</h2>
-    <p>
-      W sprawach nieuregulowanych niniejszym regulaminem zastosowanie mają
-      przepisy prawa polskiego.
-    </p>
+    <div id="appHeader"></div>
+
+    <main class="page">
+      <div class="container">
+        <section class="heroBanner">
+          <div class="heroTitleRow">
+            <div class="heroIcon">&#128196;</div>
+            <div>
+              <h1 class="glow-text" style="margin: 0">Regulamin</h1>
+              <div class="subtitle" style="margin-top: 6px">
+                Regulamin świadczenia usług i treści cyfrowych w AquiVivo.
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">
+            Dane usługodawcy
+          </div>
+          <div class="muted">
+            Magdalena Meller, ul. Katowicka 2F/6.01, 61-131 Poznań, Polska.<br />
+            NIP: 7822348796, REGON: 542556870<br />
+            E-mail:
+            <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>,
+            Tel.: <a href="tel:+48669697151">+48 669 697 151</a>
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">Opis usługi</div>
+          <div class="muted">
+            AquiVivo umożliwia zakup dostępu do treści cyfrowych online, w
+            szczególności kursów językowych i materiałów edukacyjnych.
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">Warunki płatności</div>
+          <div class="muted">
+            Płatności realizowane są za pośrednictwem Stripe oraz Przelewy24.
+            Dostęp do treści uzyskujesz po zaksięgowaniu płatności. Wszystkie
+            ceny zawierają podatek VAT (jeśli dotyczy).
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">Dostęp do treści</div>
+          <div class="muted">
+            Dostęp do zakupionych treści cyfrowych jest udzielany natychmiast po
+            opłaceniu zamówienia. Użytkownik wyraża zgodę na natychmiastowe
+            świadczenie usługi i traci prawo do odstąpienia od umowy po
+            uzyskaniu dostępu.
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">Odpowiedzialność</div>
+          <div class="muted">
+            AquiVivo nie ponosi odpowiedzialności za przerwy w dostępie
+            wynikające z przyczyn niezależnych od właściciela serwisu (np.
+            awarie dostawców usług, siła wyższa).
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">
+            Procedura reklamacji
+          </div>
+          <div class="muted">
+            Reklamacje należy zgłaszać na adres e-mail:
+            <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>.
+            Rozpatrzenie reklamacji nastąpi w ciągu 14 dni od daty zgłoszenia.
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">
+            Postanowienia końcowe
+          </div>
+          <div class="muted">
+            W sprawach nieuregulowanych niniejszym regulaminem zastosowanie mają
+            przepisy prawa polskiego.
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
