--- a/zwroty.html
+++ b/zwroty.html
@@ -1,37 +1,75 @@
 <!doctype html>
 <html lang="pl">
   <head>
-    <meta charset="UTF-8" />
-    <title>Zwroty i odstąpienie od umowy – Aquivivo</title>
+    <meta charset="utf-8" />
+    <title>Zwroty &ndash; AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/layout.js" type="module"></script>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Zwroty i odstąpienie od umowy – Aquivivo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <script src="assets/js/layout.js" type="module"></script>
   </head>
+
   <body data-page="returns">
-      Zgodnie z przepisami UE, konsument ma prawo odstąpić od umowy zawartej na
-      odległość w terminie 14 dni bez podania przyczyny. Jednak w przypadku
-      zakupu treści cyfrowych, które są dostarczane natychmiast po zakupie,
-      prawo do odstąpienia wygasa w momencie uzyskania dostępu do treści, jeśli
-      użytkownik wyraził zgodę na natychmiastowe świadczenie usługi i został
-      poinformowany o utracie prawa do odstąpienia.
-    </p>
-    <h2>Wyjątek dla treści cyfrowych</h2>
-    <p>
-      Kupując dostęp do kursów i materiałów Aquivivo, wyrażasz zgodę na
-      natychmiastowe świadczenie usługi i przyjmujesz do wiadomości, że tracisz
-      prawo do odstąpienia od umowy po uzyskaniu dostępu do treści cyfrowych.
-    </p>
-    <h2>Reklamacje i kontakt</h2>
-    <p>
-      Wszelkie pytania dotyczące zwrotów i reklamacji prosimy kierować na adres:
-      <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a> lub
-      telefonicznie: +48 669 697 151.
-    </p>
+    <div id="appHeader"></div>
+
+    <main class="page">
+      <div class="container">
+        <section class="heroBanner">
+          <div class="heroTitleRow">
+            <div class="heroIcon">&#128260;</div>
+            <div>
+              <h1 class="glow-text" style="margin: 0">Zwroty i odstąpienie</h1>
+              <div class="subtitle" style="margin-top: 6px">
+                Informacje o prawie odstąpienia oraz wyjątku dla treści
+                cyfrowych.
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">
+            Prawo odstąpienia (14 dni)
+          </div>
+          <div class="muted">
+            Zgodnie z przepisami UE konsument ma prawo odstąpić od umowy zawartej
+            na odległość w terminie 14 dni bez podania przyczyny.
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">
+            Wyjątek dla treści cyfrowych
+          </div>
+          <div class="muted">
+            W przypadku zakupu treści cyfrowych, które są dostarczane natychmiast
+            po zakupie, prawo do odstąpienia wygasa w momencie uzyskania dostępu
+            do treści, jeśli użytkownik wyraził zgodę na natychmiastowe
+            świadczenie usługi i został poinformowany o utracie prawa do
+            odstąpienia.
+            <br /><br />
+            Kupując dostęp do kursów i materiałów AquiVivo, wyrażasz zgodę na
+            natychmiastowe świadczenie usługi i przyjmujesz do wiadomości, że
+            tracisz prawo do odstąpienia od umowy po uzyskaniu dostępu do treści
+            cyfrowych.
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">
+            Reklamacje i kontakt
+          </div>
+          <div class="muted">
+            Wszelkie pytania dotyczące zwrotów i reklamacji prosimy kierować na
+            adres:
+            <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>
+            lub telefonicznie: <a href="tel:+48669697151">+48 669 697 151</a>.
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
